Fix map on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,12 @@
+@media screen and (min-width: 750px) {
+
+	/* center the map only on larger screens */
+	div#canvas_container {
+		justify-content: center;
+		display: flex;
+	}
+}
+
 nav {
 	border: solid black 2px;
 	height: 50px;
@@ -53,8 +62,6 @@ div {
 	margin: 0;
 	max-width: 100%;
 	overflow: auto;
-	display: flex;
-	justify-content: center;
 }
 
 #canvas_container.hardcore {
